--- a/Projeto/src/pages/feed/feed.html
+++ b/Projeto/src/pages/feed/feed.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the FeedPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,41 +8,47 @@
 
 
 <ion-content padding>
-  <ion-card>
 
-    <ion-item>
-      <ion-avatar item-start>
-        <img src="assets/imgs/marty.png">
-      </ion-avatar>
-      <h2> {{objeto_intro.titulo}}</h2>
-      <p>{{objeto_intro.data}}</p>
-    </ion-item>
   
-    <img src="assets/imgs/carro.png">
+ 
+    <ion-card *ngFor="let filme of lista">
+      <!--*ngFor="let filme of lista"-->
+      <!-- *ngFor:MEXE NA PARTE ESTRUTURAL DO CODIGO, ELE TA MEXENDO EM TUDO -->
+      <ion-item>
+        <ion-avatar item-start>
+          <img src="assets/imgs/marty.png">
+        </ion-avatar>
+        <h2 class="feed_title"> {{filme.title}}</h2>
+        <p class="feed_date">{{filme.release_date}}</p>
+      </ion-item>
+
+      <!--img src="assets/imgs/carro.png"-->
+      <img [src]="'https://image.tmdb.org/t/p/w500/' + filme.backdrop_path">
+
+      <ion-card-content>
+        {{filme.overview}}
+      </ion-card-content>
+
+      <ion-row>
+        <ion-col>
+          <button ion-button icon-left clear small>
+            <ion-icon name="thumbs-up"></ion-icon>
+            <div> {{filme.vote_count}} votos</div>
+          </button>
+        </ion-col>
+        <ion-col>
+          <button ion-button icon-left clear small>
+            <ion-icon name="text"></ion-icon>
+            <div>{{objeto_intro.qntd_coments}}</div>
+          </button>
+        </ion-col>
+        <ion-col center text-center>
+          <ion-note>
+            {{objeto_intro.date}}
+          </ion-note>
+        </ion-col>
+      </ion-row>
+      <button ion-button block (onclick)=abrirDetalhes>Detalhes</button> <!--vai para detalhes-->
+    </ion-card>
   
-    <ion-card-content>
-      {{objeto_intro.descricao}}
-    </ion-card-content>
-  
-    <ion-row>
-      <ion-col>
-        <button ion-button icon-left clear small>
-          <ion-icon name="thumbs-up"></ion-icon>
-          <div>{{objeto_intro.qntd_likes}}</div>
-        </button>
-      </ion-col>
-      <ion-col>
-        <button ion-button icon-left clear small>
-          <ion-icon name="text"></ion-icon>
-          <div>{{objeto_intro.qntd_coments}}</div>
-        </button>
-      </ion-col>
-      <ion-col center text-center>
-        <ion-note>
-          {{objeto_intro.date}}
-        </ion-note>
-      </ion-col>
-    </ion-row>
-  
-  </ion-card>
 </ion-content>
