pagina detlhes funcionado

--- a/Projeto/src/pages/feed/feed.html
+++ b/Projeto/src/pages/feed/feed.html
@@ -48,7 +48,7 @@
           </ion-note>
         </ion-col>
       </ion-row>
-      <button ion-button block (onclick)=abrirDetalhes>Detalhes</button> <!--vai para detalhes-->
+      <button ion-button block (click)="abrirDetalhes(filme)">Detalhes</button> <!--vai para detalhes-->
     </ion-card>
   
 </ion-content>
