--- a/Projeto/src/pages/filme-detalhes/filme-detalhes.html
+++ b/Projeto/src/pages/filme-detalhes/filme-detalhes.html
@@ -26,7 +26,7 @@
     </ion-item>
 
     <!--img src="assets/imgs/carro.png"-->
-    <img [src]="'https://image.tmdb.org/t/p/w500/' + filme.backdrop_path">
+    <!--<img [src]="'https://image.tmdb.org/t/p/w500/' + filme.backdrop_path">-->
 
     <ion-card-content>
       {{filme.overview}}
